--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,5 @@
 <%- include("header") -%>
 
-<h2>sdfgnm,./dfgh</h2>
+<h2>This is a to-do list website where we can list out the things that we want to get done at the end of the day.</h2>
 
 <%- include("footer") -%>
